manifests/deployment.yaml
# app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
spec:
  replicas: 2 # Adjust based on your scaling needs
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: ai-software-engineering-todo:latest # Replace with your Docker image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000 # Adjust if your app uses a different port
        command: ["/bin/sh", "-c"]
        args: [
          "python manage.py makemigrations todo_app && \
          python manage.py migrate && \
          echo \"from django.contrib.auth.models import User; User.objects.create_superuser('admin', 'admin@example.com', 'password')\" | python manage.py shell && \
          python manage.py runserver 0.0.0.0:8000"
        ]
